lib: Fix agent re-registration by removing duplicate registration

bluetooth_agent_setup() would register the object at a user chosen
location as bluetooth_agent_register() did the same for a fixed location
(also registering the agent with bluez) the object would only be removed
from one of the two locations.

Effectively, the only thing that bluetooth_agent_setup() did was setting
custom DBus path for the object. So remove bluetooth_agent_setup() and
instead make the path a construct only property.

This fixes agent registration when switching away and back to the
bluetooth panel in gnome-control-center. Before the following warning
would be printed and the agent registration would fail:

Bluetooth-WARNING **: Failed to register object: An object is already exported for the interface org.bluez.Agent1 at /org/bluez/agent/gnome

https://bugzilla.gnome.org/show_bug.cgi?id=790720