lib/bluetooth-agent.c
@@ -110,6 +110,14 @@ struct _BluetoothAgentPrivate {
 	gpointer cancel_data;
 };
 
+enum {
+  PROP_0,
+  PROP_PATH,
+  PROP_LAST
+};
+
+static GParamSpec *props[PROP_LAST];
+
 static GDBusProxy *get_device_from_path (const char *path)
 {
 	Device1 *device;
@@ -306,6 +314,42 @@ name_vanished_cb (GDBusConnection *connection,
 	priv->busname = NULL;
 }
 
+static void
+bluetooth_agent_get_property (GObject    *object,
+			      guint       prop_id,
+			      GValue     *value,
+			      GParamSpec *pspec)
+{
+	BluetoothAgent *agent = BLUETOOTH_AGENT (object);
+	BluetoothAgentPrivate *priv = BLUETOOTH_AGENT_GET_PRIVATE (agent);
+
+	switch (prop_id) {
+	case PROP_PATH:
+		g_value_set_string (value, priv->path);
+		break;
+	default:
+		G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
+	}
+}
+
+static void
+bluetooth_agent_set_property (GObject      *object,
+			      guint         prop_id,
+			      const GValue *value,
+			      GParamSpec   *pspec)
+{
+	BluetoothAgent *agent = BLUETOOTH_AGENT (object);
+	BluetoothAgentPrivate *priv = BLUETOOTH_AGENT_GET_PRIVATE (agent);
+
+	switch (prop_id) {
+	case PROP_PATH:
+		priv->path = g_value_dup_string (value);
+		break;
+	default:
+		G_OBJECT_WARN_INVALID_PROPERTY_ID (object, prop_id, pspec);
+	}
+}
+
 static void bluetooth_agent_init(BluetoothAgent *agent)
 {
 	BluetoothAgentPrivate *priv = BLUETOOTH_AGENT_GET_PRIVATE(agent);
@@ -343,12 +387,31 @@ static void bluetooth_agent_class_init(BluetoothAgentClass *klass)
 	g_type_class_add_private(klass, sizeof(BluetoothAgentPrivate));
 
 	object_class->finalize = bluetooth_agent_finalize;
+	object_class->set_property = bluetooth_agent_set_property;
+	object_class->get_property = bluetooth_agent_get_property;
+
+	props[PROP_PATH] =
+		g_param_spec_string ("path", "Path",
+				     "Object path for the agent",
+				     BLUEZ_AGENT_PATH,
+				     G_PARAM_READWRITE | G_PARAM_CONSTRUCT_ONLY);
+
+	g_object_class_install_properties (object_class,
+					   PROP_LAST,
+					   props);
+
 }
 
 BluetoothAgent *
-bluetooth_agent_new (void)
+bluetooth_agent_new (const char *path)
 {
-	return BLUETOOTH_AGENT (g_object_new (BLUETOOTH_TYPE_AGENT, NULL));
+	if (path != NULL)
+		return BLUETOOTH_AGENT (g_object_new (BLUETOOTH_TYPE_AGENT,
+						      "path", path,
+						      NULL));
+	else
+		return BLUETOOTH_AGENT (g_object_new (BLUETOOTH_TYPE_AGENT,
+						      NULL));
 }
 
 static void
@@ -426,33 +489,6 @@ static const GDBusInterfaceVTable interface_vtable =
 	NULL, /* SetProperty */
 };
 
-gboolean bluetooth_agent_setup(BluetoothAgent *agent, const char *path)
-{
-	BluetoothAgentPrivate *priv = BLUETOOTH_AGENT_GET_PRIVATE(agent);
-	GError *error = NULL;
-
-	if (priv->path != NULL) {
-		g_warning ("Agent already setup on '%s'", priv->path);
-		return FALSE;
-	}
-
-	priv->path = g_strdup(path);
-
-	priv->reg_id = g_dbus_connection_register_object (priv->conn,
-						      priv->path,
-						      priv->introspection_data->interfaces[0],
-						      &interface_vtable,
-						      agent,
-						      NULL,
-						      &error);
-	if (priv->reg_id == 0) {
-		g_warning ("Failed to register object: %s", error->message);
-		g_error_free (error);
-	}
-
-	return TRUE;
-}
-
 gboolean bluetooth_agent_register(BluetoothAgent *agent)
 {
 	BluetoothAgentPrivate *priv;
@@ -468,7 +504,7 @@ gboolean bluetooth_agent_register(BluetoothAgent *agent)
                      BLUEZ_SERVICE, "/org/bluez", NULL, NULL);
 
 	priv->reg_id = g_dbus_connection_register_object (priv->conn,
-						      BLUEZ_AGENT_PATH,
+						      priv->path,
 						      priv->introspection_data->interfaces[0],
 						      &interface_vtable,
 						      agent,
@@ -482,7 +518,7 @@ gboolean bluetooth_agent_register(BluetoothAgent *agent)
 	}
 
 	ret = agent_manager1_call_register_agent_sync (priv->agent_manager,
-						       BLUEZ_AGENT_PATH,
+						       priv->path,
 						       "DisplayYesNo",
 						       NULL, &error);
 	if (ret == FALSE) {
@@ -492,7 +528,7 @@ gboolean bluetooth_agent_register(BluetoothAgent *agent)
 	}
 
 	ret = agent_manager1_call_request_default_agent_sync (priv->agent_manager,
-							      BLUEZ_AGENT_PATH,
+							      priv->path,
 							      NULL, &error);
 	if (ret == FALSE) {
 		g_printerr ("Agent registration as default failed: %s\n", error->message);
@@ -516,7 +552,7 @@ gboolean bluetooth_agent_unregister(BluetoothAgent *agent)
 		return FALSE;
 
 	if (agent_manager1_call_unregister_agent_sync (priv->agent_manager,
-						       BLUEZ_AGENT_PATH,
+						       priv->path,
 						       NULL, &error) == FALSE) {
 		/* Ignore errors if the adapter is gone */
 		if (g_error_matches (error, G_DBUS_ERROR, G_DBUS_ERROR_UNKNOWN_METHOD) == FALSE) {
